--- a/calender.html
+++ b/calender.html
@@ -22,9 +22,9 @@
                         </button> 
 
                         <ul class="nav-links" id="navLinks">
-                            <li><a href="">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="learn.html">What You'll Learn</a></li>
+                            <li><a href="index.html">What You'll Learn</a></li>
                             <li><a href="calender.html">Calender</a></li>
                             <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="#">Help</a></li>
@@ -108,12 +108,12 @@
                 <div class="footer-wrapper">
                     <div class="sub-wrapper">
                     <h3>Explore</h3>
-                    <p><a href="">Home</a></p>
-                    <p><a href="">Terms & Conditions</a></p>
-                    <p><a href="learn.html">What You'll Learn</a></p>
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">Terms & Conditions</a></p>
+                    <p><a href="index.html">What You'll Learn</a></p>
                     <p><a href="calender.html">Calender</a></p>
                     <p><a href="FAQ.html">FAQ</a></p>
-                    <p><a href="">Help</a></p>
+                    <p><a href="#">Help</a></p>
                    </div>
 
                 <div class="sub-wrapper">
